--- a/java-web-ru/rest-api/build.gradle
+++ b/java-web-ru/rest-api/build.gradle
@@ -18,6 +18,7 @@ dependencies {
   implementation 'io.javalin:javalin:4.0.1'
   implementation 'org.slf4j:slf4j-simple:1.7.31'
   implementation 'com.h2database:h2:1.4.200'
+  implementation group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.12.RELEASE'
 
   implementation 'io.ebean:ebean:12.11.5'
   implementation 'io.ebean:ebean-ddl-generator:12.11.5'
